sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:4: error: not found: value ecart
	ecart=getNombreValeur()/2
        ^AlgShellSort:5: error: not found: value ecart
while(ecart>0)
      ^